--- a/sass/_mystyles.scss
+++ b/sass/_mystyles.scss
@@ -1338,8 +1338,8 @@ body {
 }
 
 //Media Queries
-// .hot-topics-box {
-//   @media only screen and (max-width: 990px) {
-//     height: 110px;
-//   }
-// }
+.hot-topics-box {
+  @media only screen and (max-width: 990px) {
+    height: 110px;
+  }
+}
