--- a/sass/_mystyles.scss
+++ b/sass/_mystyles.scss
@@ -115,6 +115,7 @@ body {
 
   .navbar {
     background: url("/footages/world-map.png") no-repeat center right 262px;
+    background-size: auto;
   }
 
   .navbar-nav {
