--- a/sass/_mediaquery.scss
+++ b/sass/_mediaquery.scss
@@ -1,14 +1,14 @@
-// @media (min-width: 1300px) {
-//   .container {
-//     width: 1246px !important;
-//   }
-// }
+@media (min-width: 1300px) {
+  .container {
+    width: 1246px !important;
+  }
+}
 
-// @media (min-width: 1200px) {
-//   .container {
-//     width: 1156px;
-//   }
-// }
+@media (min-width: 1200px) {
+  .container {
+    width: 1156px;
+  }
+}
 
 // @media (min-width: 992px) {
 //   .container {
