--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -2,6 +2,14 @@
 .row {
   --bs-gutter-x: 1rem;
 }
+.navbar {
+  --bs-navbar-padding-y: 0.25rem;
+}
+// .nav-tabs {
+//   .nav-link {
+//     border: none !important;
+//   }
+// }
 $grid-gutter-width: 1.5rem;
 $bs-gutter-x: 1rem;
 $grid-gutter-x: 1rem;
