--- a/sass/_mystyles.scss
+++ b/sass/_mystyles.scss
@@ -493,17 +493,17 @@ body {
 // جداول قیمتی
 td[data-table-var="name"] {
   // background-color: lightblue;
-  ::before {
-    // content: "";
-    // margin-left: 5px;
-    // position: relative;
-    // bottom: -2px;
-    // background-position-x: 0%;
-    // background-position-y: 0%;
-    // display: inline-block;
-    // width: 16px;
-    // height: 11px;
-  }
+  // ::before {
+  //   // content: "";
+  //   // margin-left: 5px;
+  //   // position: relative;
+  //   // bottom: -2px;
+  //   // background-position-x: 0%;
+  //   // background-position-y: 0%;
+  //   // display: inline-block;
+  //   // width: 16px;
+  //   // height: 11px;
+  // }
   .fi {
     margin-left: 5px;
     font-size: 15px;
@@ -782,7 +782,7 @@ td[data-table-var="name"] {
     }
   }
   i {
-    margin-left: 7px;
+    margin-left: 4px;
   }
 }
 
@@ -933,7 +933,6 @@ td[data-table-var="name"] {
 
   .content-col-li-thumbnail {
     .background {
-      // background-color: $white-100;
       padding: 0 10px;
       margin-bottom: 0;
     }
@@ -968,6 +967,12 @@ td[data-table-var="name"] {
           display: flex;
         }
       }
+    }
+    h3 {
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
     }
   }
   .content-col-li ul li {
@@ -1638,9 +1643,27 @@ td[data-table-var="name"] {
 
 //Media Queries
 
-@media only screen and (min-width: 576px) and (max-width: 768px) {
+@media only screen and (min-width: 576px) and (max-width: 767px) {
   .btn-login {
     margin-left: 35px;
+  }
+}
+@media only screen and (min-width: 100px) and (max-width: 767px) {
+  .btn-login {
+    padding: 0 !important ;
+  }
+  .hero-banner {
+    height: 15rem;
+    a {
+      img {
+        object-fit: cover;
+        height: 232px !important;
+        width: 100% !important;
+      }
+    }
+    h3 {
+      font-size: 19px !important;
+    }
   }
 }
 @media only screen and (max-width: 991px) {
