--- a/sass/_mystyles.scss
+++ b/sass/_mystyles.scss
@@ -38,7 +38,6 @@ body {
 }
 
 .navbar {
-  // height: 37px;
   background-color: $white-100 !important;
   a {
     color: $black-100;
@@ -59,7 +58,6 @@ body {
   }
   span {
     font-size: 13px;
-    // margin-left: 5px;
   }
   ul {
     border-right: 1px solid #b7b7b7;
@@ -272,7 +270,7 @@ body {
       border: 1px solid $gray-200;
       padding: 12px;
       height: 100px;
-      // box-shadow: -5px 2px 12px 0px rgba(25, 25, 25, 0.1);
+
       overflow: hidden;
       &:hover {
         h2,
@@ -457,6 +455,7 @@ body {
   font-size: 19px;
   font-weight: 900;
   overflow: scroll;
+  margin-top: 20px;
   ul {
     list-style: none;
     li {
@@ -481,7 +480,6 @@ body {
       color: $gray-400;
       &:hover {
         color: $blue-200 !important;
-        // background-color: green;
       }
     }
   }
@@ -490,20 +488,13 @@ body {
   }
 }
 
+// باکس تبلیغات، بعد از سلکتور اسلایدشو
+.adv-box-main a img {
+  margin-top: 8px;
+}
+
 // جداول قیمتی
 td[data-table-var="name"] {
-  // background-color: lightblue;
-  // ::before {
-  //   // content: "";
-  //   // margin-left: 5px;
-  //   // position: relative;
-  //   // bottom: -2px;
-  //   // background-position-x: 0%;
-  //   // background-position-y: 0%;
-  //   // display: inline-block;
-  //   // width: 16px;
-  //   // height: 11px;
-  // }
   .fi {
     margin-left: 5px;
     font-size: 15px;
@@ -515,17 +506,9 @@ td[data-table-var="name"] {
 .chart-gold-coin,
 .chart-money {
   .table {
-    td {
-      // background-color: transparent !important;
-      tr {
-        &:hover {
-          background-color: $table-hover !important;
-        }
-      }
-    }
     tr {
       &:hover {
-        background-color: $table-hover;
+        background-color: $table-hover !important;
       }
     }
   }
@@ -555,7 +538,7 @@ td[data-table-var="name"] {
     }
     .more-info {
       background-color: $white-200;
-      padding: 2px 10px 5px;
+      padding: 2px 8px;
       font-size: 10px;
       color: $gray-500;
       font-family: "YekanWeb-Regular";
@@ -657,7 +640,7 @@ td[data-table-var="name"] {
       font-size: 10px;
       font-family: "YekanWeb-Regular";
       background-color: $white-200;
-      padding: 1px 10px 3px;
+      padding: 2px 8px;
       :hover {
         background-color: $gray-700 !important;
       }
@@ -734,7 +717,7 @@ td[data-table-var="name"] {
       font-size: 10px;
       font-family: "YekanWeb-Regular";
       background-color: $white-200;
-      padding: 1px 10px 3px;
+      padding: 2px 8px;
       color: $gray-500;
       &:hover {
         background-color: $gray-700 !important;
@@ -746,7 +729,7 @@ td[data-table-var="name"] {
     background-color: $white-100;
     border-top: 3px solid $orange-100;
     padding: 12px;
-    // box-shadow: -5px 2px 12px 0px rgba(25, 25, 25, 0.1);
+
     &:hover {
       h2,
       h3 {
@@ -847,7 +830,7 @@ td[data-table-var="name"] {
       }
 
       a:hover {
-        transform: translateX(-10px);
+        // transform: translateX(-10px);
       }
       .fa-align-justify {
         margin-left: 8px;
@@ -918,7 +901,7 @@ td[data-table-var="name"] {
         }
       }
       p {
-        padding: 0 16px;
+        padding: 0 8px;
       }
     }
     a {
@@ -967,6 +950,7 @@ td[data-table-var="name"] {
           display: flex;
         }
       }
+      border: 1px solid $gray-200 !important;
     }
     h3 {
       display: -webkit-box;
@@ -989,10 +973,7 @@ td[data-table-var="name"] {
       margin: 0;
       height: 34rem;
       overflow: hidden;
-      border-top: 3px solid $purpule-100;
-      border-bottom: 1px solid $gray-200;
-      border-left: 1px solid $gray-200;
-      border-right: 1px solid $gray-200;
+      border: 1px solid $gray-200 !important;
       height: 100%;
       li {
         white-space: nowrap;
@@ -1016,7 +997,7 @@ td[data-table-var="name"] {
           display: inline-block;
           content: "\f111";
           font-size: 8px;
-          // line-height: 1;
+
           position: relative;
           margin: 0 4px;
           color: $purpule-100;
@@ -1077,7 +1058,6 @@ td[data-table-var="name"] {
   }
   .content-col-li {
     ul {
-      border-top: 3px solid $purpule-100 !important;
       li {
         a:hover {
           color: $purpule-100 !important;
@@ -1108,6 +1088,12 @@ td[data-table-var="name"] {
   .topic {
     :hover {
       color: $purpule-100 !important;
+    }
+  }
+  &:hover {
+    .menu-items {
+      transform: translateX(-10px);
+      transition: transform 0.3s ease-in-out;
     }
   }
 }
@@ -1160,7 +1146,6 @@ td[data-table-var="name"] {
   }
   .content-col-li {
     ul {
-      border-top: 3px solid $green-100 !important;
       li {
         a:hover {
           color: $green-100 !important;
@@ -1191,6 +1176,12 @@ td[data-table-var="name"] {
   .topic {
     :hover {
       color: $green-100 !important;
+    }
+  }
+  &:hover {
+    .menu-items {
+      transform: translateX(-10px);
+      transition: transform 0.3s ease-in-out;
     }
   }
 }
@@ -1244,7 +1235,6 @@ td[data-table-var="name"] {
   }
   .content-col-li {
     ul {
-      border-top: 3px solid $pink-100 !important;
       li {
         a:hover {
           color: $pink-100 !important;
@@ -1276,6 +1266,12 @@ td[data-table-var="name"] {
   .topic {
     :hover {
       color: $pink-100 !important;
+    }
+  }
+  &:hover {
+    .menu-items {
+      transform: translateX(-10px);
+      transition: transform 0.3s ease-in-out;
     }
   }
 }
@@ -1329,7 +1325,6 @@ td[data-table-var="name"] {
   }
   .content-col-li {
     ul {
-      border-top: 3px solid $blue-200 !important;
       li {
         a:hover {
           color: $blue-200 !important;
@@ -1360,6 +1355,12 @@ td[data-table-var="name"] {
   .topic {
     :hover {
       color: $blue-200 !important;
+    }
+  }
+  &:hover {
+    .menu-items {
+      transform: translateX(-10px);
+      transition: transform 0.3s ease-in-out;
     }
   }
 }
@@ -1417,6 +1418,12 @@ td[data-table-var="name"] {
       height: 100%;
     }
   }
+  &:hover {
+    .menu-items {
+      transform: translateX(-10px);
+      transition: transform 0.3s ease-in-out;
+    }
+  }
 }
 
 // نیامندی‌ها
@@ -1436,7 +1443,7 @@ td[data-table-var="name"] {
       }
 
       a:hover {
-        transform: translateX(-10px);
+        // transform: translateX(-10px);
       }
       .fa-align-justify {
         margin-left: 8px;
@@ -1501,6 +1508,7 @@ td[data-table-var="name"] {
         transition: transform 0.5s ease;
         &:hover {
           transform: scale(1.1);
+          cursor: pointer;
         }
       }
     }
@@ -1515,6 +1523,12 @@ td[data-table-var="name"] {
       height: 35%;
       width: 100%;
       overflow: hidden;
+    }
+  }
+  &:hover {
+    .menu-items {
+      transform: translateX(-10px);
+      transition: transform 0.3s ease-in-out;
     }
   }
 }
@@ -1544,7 +1558,6 @@ td[data-table-var="name"] {
     }
   }
   .navbar2 {
-    // background-color: $white-100 !important;
     margin-left: 16px;
     .search-box {
       position: relative;
@@ -1590,19 +1603,37 @@ td[data-table-var="name"] {
     margin: 0 auto;
     justify-content: center;
     a {
-      // margin: 0;
-      padding: 10px;
+      padding: 0 5px;
+      margin: 0 10px;
     }
     ul {
       display: flex;
       li {
         font-size: 20px;
         i {
-          background-color: #00abff;
           padding: 10px;
+
           border-radius: 50%;
         }
       }
+    }
+    .telegram {
+      background-color: #28a8e9;
+    }
+    .twitter {
+      background-color: #1da1f2;
+    }
+    .instagram {
+      background-color: #800af0;
+    }
+    .facebook {
+      background-color: #106aff;
+    }
+    .reddit {
+      background-color: #ff4d00;
+    }
+    .linkedin {
+      background-color: #0077b5;
     }
   }
   .footer-list {
@@ -1640,6 +1671,7 @@ td[data-table-var="name"] {
     }
   }
 }
+// Drop down options
 
 //Media Queries
 
@@ -1760,4 +1792,9 @@ td[data-table-var="name"] {
   .content-col-li ul li:nth-last-child(3) {
     display: none;
   }
+}
+
+.table-hover tbody tr:hover td,
+.table-hover tbody tr:hover th {
+  background-color: $table-hover;
 }
