--- a/sass/_mystyles.scss
+++ b/sass/_mystyles.scss
@@ -128,10 +128,10 @@ body {
       font-weight: 700;
       font-size: 18px;
     }
-    :hover {
-      background-color: $red-200 !important;
-      box-shadow: 0 1px 10px rgba(0, 0, 0, 0.3) inset;
-    }
+    // :hover {
+    //   background-color: $red-200 !important;
+    //   box-shadow: 0 1px 10px rgba(0, 0, 0, 0.3) inset;
+    // }
     i {
       margin-right: 3px;
       pointer-events: none;
@@ -606,6 +606,11 @@ td[data-table-var="name"] {
   }
 }
 
+.table-hover tbody tr:hover td,
+.table-hover tbody tr:hover th {
+  background-color: $table-hover;
+}
+
 // جدول چهارگانه، برای سایز مدیوم و کوچکتر از آن
 .tab-selector-2 {
   button {
@@ -824,6 +829,7 @@ td[data-table-var="name"] {
       white-space: nowrap;
       overflow: scroll;
       width: 100%;
+      transition: transform 0.3s ease-in-out;
       a {
         display: inline-block;
         transition: transform 0.3s ease;
@@ -1673,6 +1679,143 @@ td[data-table-var="name"] {
 }
 // Drop down options
 
+// اخبارها و رویدادها
+.akhbar a {
+  &:hover {
+    background-color: $red-200 !important;
+    box-shadow: 0 1px 10px rgba(0, 0, 0, 0.3) inset;
+  }
+}
+.akhbar {
+  &:hover {
+    .akhbar-dropdown {
+      display: flex;
+    }
+  }
+}
+.akhbar-dropdown {
+  display: none;
+  background-color: #111111;
+  right: 0;
+  border-bottom: 6px solid $main-red;
+  a:hover {
+    background-color: #b71818 !important;
+  }
+  .topic-container {
+    padding: 10px 8px;
+    a {
+      height: 25px;
+      padding-right: 10px;
+      font-size: 16px;
+      font-weight: 400;
+      margin: 5px 0;
+      &:hover {
+        padding-right: 6px !important;
+        transition: all 0.3s ease-in-out;
+      }
+    }
+  }
+  .dropdown-topic {
+    background-color: #313131;
+    padding: 0 !important;
+  }
+  .spacer {
+    background-color: #1b1b1b;
+  }
+}
+// نرخ‌ها و داده‌ها
+.nerkh a {
+  &:hover {
+    background-color: $red-200 !important;
+    box-shadow: 0 1px 10px rgba(0, 0, 0, 0.3) inset;
+  }
+}
+.nerkh-dropdown {
+  display: none;
+  background-color: #111111;
+  right: 0;
+  border-bottom: 6px solid $main-red;
+  padding: 0;
+  a:hover {
+    background-color: #b71818 !important;
+    i {
+      color: $white-100 !important;
+    }
+  }
+  ul {
+    list-style: none;
+    display: flex;
+    padding: 0;
+    margin: 0;
+    align-items: center;
+    li {
+      width: 100%;
+      a {
+        border-left: 1px solid $gray-400;
+        padding: 6px 10px 10px 10px;
+        i {
+          font-size: 12px !important;
+          margin: 0 16px 0 8px !important;
+          color: $main-red !important;
+        }
+      }
+      &:not(:last-child) a {
+        border-left: 1px solid $gray-400;
+      }
+    }
+    li:last-child a {
+      border-left: none;
+    }
+  }
+}
+
+.nerkh {
+  &:hover {
+    .nerkh-dropdown {
+      display: flex;
+    }
+  }
+}
+// استان ها
+.ostan a {
+  &:hover {
+    background-color: $red-200 !important;
+    box-shadow: 0 1px 10px rgba(0, 0, 0, 0.3) inset;
+  }
+}
+.ostan {
+  .ostan-dropdown {
+    display: none;
+    right: 0;
+    background-color: $pure-black;
+    padding: 0;
+  }
+  .row-row {
+    padding: 0;
+    ul li {
+      width: 200px !important;
+      height: 35px !important;
+    }
+  }
+}
+.ostan {
+  &:hover {
+    .ostan-dropdown {
+      display: flex;
+    }
+  }
+}
+
+.eco-dropdown {
+  display: none;
+}
+.eco-title {
+  &:hover {
+    .eco-dropdown {
+      display: flex;
+    }
+  }
+}
 //Media Queries
 
 @media only screen and (min-width: 576px) and (max-width: 767px) {
@@ -1792,9 +1935,4 @@ td[data-table-var="name"] {
   .content-col-li ul li:nth-last-child(3) {
     display: none;
   }
-}
-
-.table-hover tbody tr:hover td,
-.table-hover tbody tr:hover th {
-  background-color: $table-hover;
 }
