--- a/sass/styles.css
+++ b/sass/styles.css
@@ -138,10 +138,6 @@ body a {
   font-weight: 700;
   font-size: 18px;
 }
-.navbar-main-hover .navbar-nav :hover {
-  background-color: #92191f !important;
-  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.3) inset;
-}
 .navbar-main-hover .navbar-nav i {
   margin-right: 3px;
   pointer-events: none;
@@ -594,6 +590,11 @@ td[data-table-var=name] .fi {
   border-top: 3px solid #b71818 !important;
 }
 
+.table-hover tbody tr:hover td,
+.table-hover tbody tr:hover th {
+  background-color: #fff0e5;
+}
+
 .tab-selector-2 button {
   width: 25%;
   border-radius: 0px !important;
@@ -802,6 +803,7 @@ td[data-table-var=name] .fi {
   white-space: nowrap;
   overflow: scroll;
   width: 100%;
+  transition: transform 0.3s ease-in-out;
 }
 .financial .menu .menu-items a,
 .market .menu .menu-items a,
@@ -1484,6 +1486,7 @@ td[data-table-var=name] .fi {
 }
 .requirements .content-banner .background img:hover {
   transform: scale(1.1);
+  cursor: pointer;
 }
 .requirements .content-banner a {
   position: absolute;
@@ -1635,6 +1638,125 @@ td[data-table-var=name] .fi {
   color: #ffffff;
 }
 
+.akhbar a:hover {
+  background-color: #92191f !important;
+  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.3) inset;
+}
+
+.akhbar:hover .akhbar-dropdown {
+  display: flex;
+}
+
+.akhbar-dropdown {
+  display: none;
+  background-color: #111111;
+  right: 0;
+  border-bottom: 6px solid #bb0000;
+}
+.akhbar-dropdown a:hover {
+  background-color: #b71818 !important;
+}
+.akhbar-dropdown .topic-container {
+  padding: 10px 8px;
+}
+.akhbar-dropdown .topic-container a {
+  height: 25px;
+  padding-right: 10px;
+  font-size: 16px;
+  font-weight: 400;
+  margin: 5px 0;
+}
+.akhbar-dropdown .topic-container a:hover {
+  padding-right: 6px !important;
+  transition: all 0.3s ease-in-out;
+}
+.akhbar-dropdown .dropdown-topic {
+  background-color: #313131;
+  padding: 0 !important;
+}
+.akhbar-dropdown .spacer {
+  background-color: #1b1b1b;
+}
+
+.nerkh a:hover {
+  background-color: #92191f !important;
+  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.3) inset;
+}
+
+.nerkh-dropdown {
+  display: none;
+  background-color: #111111;
+  right: 0;
+  border-bottom: 6px solid #bb0000;
+  padding: 0;
+}
+.nerkh-dropdown a:hover {
+  background-color: #b71818 !important;
+}
+.nerkh-dropdown a:hover i {
+  color: #ffffff !important;
+}
+.nerkh-dropdown ul {
+  list-style: none;
+  display: flex;
+  padding: 0;
+  margin: 0;
+  align-items: center;
+}
+.nerkh-dropdown ul li {
+  width: 100%;
+}
+.nerkh-dropdown ul li a {
+  border-left: 1px solid #989898;
+  padding: 6px 10px 10px 10px;
+}
+.nerkh-dropdown ul li a i {
+  font-size: 12px !important;
+  margin: 0 16px 0 8px !important;
+  color: #bb0000 !important;
+}
+.nerkh-dropdown ul li:not(:last-child) a {
+  border-left: 1px solid #989898;
+}
+.nerkh-dropdown ul li:last-child a {
+  border-left: none;
+}
+
+.nerkh:hover .nerkh-dropdown {
+  display: flex;
+}
+
+.ostan a:hover {
+  background-color: #92191f !important;
+  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.3) inset;
+}
+
+.ostan .ostan-dropdown {
+  display: none;
+  right: 0;
+  background-color: #000000;
+  padding: 0;
+}
+.ostan .row-row {
+  padding: 0;
+}
+.ostan .row-row ul li {
+  width: 200px !important;
+  height: 35px !important;
+}
+
+.ostan:hover .ostan-dropdown {
+  display: flex;
+}
+
+.eco-dropdown {
+  display: none;
+}
+
+.eco-title:hover .eco-dropdown {
+  display: flex;
+}
+
 @media only screen and (min-width: 576px) and (max-width: 767px) {
   .btn-login {
     margin-left: 35px;
@@ -1741,11 +1863,6 @@ td[data-table-var=name] .fi {
     display: none;
   }
 }
-.table-hover tbody tr:hover td,
-.table-hover tbody tr:hover th {
-  background-color: #fff0e5;
-}
-
 @media (min-width: 1300px) {
   .container {
     width: 1246px !important;
