--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -23,6 +23,7 @@ $gray-600: #c5c5c5;
 $gray-700: #666666;
 $gray-800: #717171;
 $gray-900: #4e4e4e;
+$menu-gray: #d2d2d2;
 
 $bg-white: #f2f2f2;
 $white-100: #ffffff;
